syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";

package function;

service FunctionService {
  rpc FunctionInvoke(FunctionInvokeRequest)
      returns (stream FunctionInvokeResponse) {}
  rpc FunctionGetArgs(FunctionGetArgsRequest)
      returns (FunctionGetArgsResponse) {}
  rpc FunctionSetResult(FunctionSetResultRequest)
      returns (FunctionSetResultResponse) {}
  rpc FunctionMonitor(FunctionMonitorRequest)
      returns (stream FunctionMonitorResponse);
  rpc FunctionSchedule(FunctionScheduleRequest)
      returns (FunctionScheduleResponse) {}
}

message FunctionInvokeRequest {
  string stub_id = 1;
  bytes args = 2;
}

message FunctionInvokeResponse {
  string task_id = 1;
  string output = 2;
  bool done = 3;
  int32 exit_code = 4;
  bytes result = 5;
}

message FunctionGetArgsRequest { string task_id = 1; }
message FunctionGetArgsResponse {
  bool ok = 1;
  bytes args = 2;
}

message FunctionSetResultRequest {
  string task_id = 1;
  bytes result = 2;
}

message FunctionSetResultResponse { bool ok = 1; }

message FunctionMonitorRequest {
  string task_id = 1;
  string stub_id = 2;
  string container_id = 3;
}

message FunctionMonitorResponse {
  bool ok = 1;
  bool cancelled = 2;
  bool complete = 3;
  bool timed_out = 4;
}

message FunctionScheduleRequest {
  string stub_id = 1;
  string when = 2;
  string deployment_id = 3;
}

message FunctionScheduleResponse {
  bool ok = 1;
  string err_msg = 2;
  string scheduled_job_id = 3;
}
